--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.0.1",
     "webpack-bundle-tracker": "^0.4.3",
