--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@ant-design/charts": "^1.2.4",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
